archive/cert-manager/ingress-test.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: api-ingress
 namespace: default
 annotations:
   # add an annotation indicating the issuer to use
   certmanager.k8s.io/acme-challenge-type: http01
   cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
 rules:
 - host: nginx4.production.intainabs.emulya.com
   http:
     paths:
     - path: /
       backend:
         serviceName: ingress-demo
         servicePort: 80
 tls:
 - secretName: nginx-cert
   hosts:
   - nginx4.production.intainabs.emulya.com
